k8s.yaml
## deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${CICD_GIT_REPO_NAME}-${CICD_GIT_BRANCH}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ${CICD_GIT_REPO_NAME}-${CICD_GIT_BRANCH}
  template:
    metadata:
      labels:
        app: ${CICD_GIT_REPO_NAME}-${CICD_GIT_BRANCH}
    spec:
      imagePullSecrets:
      - name: pipeline-docker-registry
      containers:
      - name: ${CICD_GIT_REPO_NAME}-${CICD_GIT_BRANCH}
        image: ${CICD_IMAGE}:${CICD_GIT_BRANCH}-${CICD_EXECUTION_SEQUENCE}
        ports:
        - containerPort: 3000

---
## service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${CICD_GIT_REPO_NAME}-${CICD_GIT_BRANCH}-service
  labels: 
    app: ${CICD_GIT_REPO_NAME}-${CICD_GIT_BRANCH}
spec:
  type: NodePort
  selector:
    app: ${CICD_GIT_REPO_NAME}-${CICD_GIT_BRANCH}
  ports:
    - name: webport
      protocol: TCP
      port: 3000
      
---
## Cert-http01
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ${CICD_GIT_REPO_NAME}-${CICD_GIT_BRANCH}-ing
  namespace: ${CICD_GIT_REPO_NAME}
  annotations:
    # 憑證產生
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-prod-${CICD_GIT_REPO_NAME}"
spec:
  tls:
  - hosts:
    - "web-${CICD_GIT_BRANCH}-${CICD_GIT_REPO_NAME}.120.105.129.176.xip.io"
    secretName: web-${CICD_GIT_BRANCH}-${CICD_GIT_REPO_NAME}-xip-prod-tls
  rules:
  - host: "web-${CICD_GIT_BRANCH}-${CICD_GIT_REPO_NAME}.120.105.129.176.xip.io"
    http:
      paths:
      - backend:
          serviceName: ${CICD_GIT_REPO_NAME}-${CICD_GIT_BRANCH}-svc
          servicePort: 3000
        path: "/"
        pathType: "ImplementationSpecific"
